# kernel

./: Cargo.toml  README.md  kernel.ld
.cargo/: config.toml
src/: boot.rs  bootstrap.rs  main.rs  panic.rs  pd.rs
src/acpi/: mod.rs
src/apic/: consts.rs  ioapic.rs  mod.rs
src/boot/: k2b.rs  mod.rs  structures.rs
src/boot/b2k/: memory_map.rs  mod.rs  modules.rs
src/desc/: tss.rs
src/desc/gdt/: code.rs  data.rs  lgdt.s  mod.rs  tss.rs
src/desc/idt/: default_isr.rs  isrs.s  lidt.s  mod.rs
src/desc/idt/exceptions/: mod.rs
src/desc/idt/exceptions/gp/: asm.s  mod.rs
src/desc/idt/exceptions/pf/: asm.s  mod.rs
src/desc/idt/exceptions/ud/: asm.s  mod.rs
src/drivers/: mod.rs
src/drivers/acpi/: mod.rs  structures.rs
src/drivers/apic/: consts.rs  ioapic.rs  mod.rs
src/drivers/pit/: consts.rs  mod.rs
src/futex/: mod.rs
src/mem/: alloc.rs  mod.rs
src/mem/paging/: mod.rs
src/mem/paging/paging/: mod.rs  structures.rs
src/mem/paging/the/: README.txt  mod.rs
src/mem/pmm/: init.rs  mod.rs  ops.rs
src/mem/pmm/bitmap/: mod.rs
src/pit/: consts.rs  mod.rs
src/tasks/: mod.rs
src/tasks/loader/: errors.rs  mod.rs  parse.rs  reloc.rs
src/tasks/scheduler/: kstatesave.s  mod.rs
src/tasks/task/: dispatcher.s  futex.rs  mod.rs  regs.rs  statesave.s  tls.rs
src/term/: mod.rs
src/term/drivers/: mod.rs  text.rs  writer.rs
src/term/drivers/text/: cursor.rs  mod.rs
src/utils/: cpu.rs  mod.rs  regs.rs
