[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
lazy_static = { "version" = "1.0", "features" = ["spin_no_std"] }
spin = "0.5.2"
bitfield = "0.14.0"
good_memory_allocator = "0.1.7"
elf = { "git" = "https://github.com/cole14/rust-elf", "default-features" = false, "features" = ["nightly"] }
hashbrown = "0.13.1"
